objects/MBPass__mdt.object
<CustomObject>
    <description>Metadata for all the configs related to MBPasses</description>
    <fields>
        <fullName>destDataTag__c</fullName>
        <description>The data tag to
receive the passed
data.</description>
        <label>destDataTag</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>destServId__c</fullName>
        <description>The service id of the
service to receive
the data.</description>
        <label>destServId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>operationName__c</fullName>
        <description>operation name</description>
        <label>operationName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>serviceId__c</fullName>
        <description>Service id</description>
        <label>serviceId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>srcDataTag__c</fullName>
        <description>source data tag</description>
        <label>srcDataTag</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trimSkip__c</fullName>
        <description>Trim skip</description>
        <label>trimSkip</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trimTyp__c</fullName>
        <description>Trim type</description>
        <label>trimTyp</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>MBPass</label>
    <pluralLabel>MBPasses</pluralLabel>
</CustomObject>